--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,16 +25,11 @@ jobs:
           ./build.sh
           ./install.sh ../
 
-      - name: Compare
-        run: make -j${nproc} compare
+      - name: Build
+        run: make -j${nproc}
+
+      - name: UK
+        run: make -j${nproc} uk
 
       - name: Modern
         run: make -j${nproc} modern
-
-      - name: Webhook
-        if: ${{ github.event_name == 'push' }}
-        env:
-          CALCROM_DISCORD_WEBHOOK_USERNAME: OK
-          CALCROM_DISCORD_WEBHOOK_AVATAR_URL: https://i.imgur.com/38BQHdd.png
-          CALCROM_DISCORD_WEBHOOK_URL: ${{ secrets.CALCROM_DISCORD_WEBHOOK_URL }}
-        run: sh .github/calcrom/webhook.sh pokeemerald
