--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       GAME_REVISION: 0
       GAME_LANGUAGE: ENGLISH
       MODERN: 0
-      COMPARE: 1
+      COMPARE: 0
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -36,7 +36,7 @@ jobs:
           ./install.sh ../
         working-directory: agbcc
 
-      - name: Agbcc
+      - name: Project
         run: make -j${nproc}
 
       - name: Uk
